@@ -16,7 +16,6 @@ rpmbuild \- Build RPM Package(s)
 
 \fBrpmbuild\fR {\fB--rebuild|--recompile\fR} \fB\fISOURCEPKG\fB\fR\fI ...\fR
 
-\fBrpmbuild\fR \fB--tarbuild\fR \fB\fITARBALL\fB\fR\fI ...\fR
 .SS "MISCELLANEOUS:"
 .PP
 
